--- a/index.html
+++ b/index.html
@@ -11,14 +11,35 @@
 <body>
     <header>
         <nav id="navbar">
-            <h1 class="logo"><a href="index.html">HBT</a></h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <div class="container">
+                <h1 class="logo"><a href="index.html">HBT</a></h1>
+                <ul>
+                    <li><a class="current" href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            
         </nav>
+
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1><span class="text-primary">Enjoy </span>Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, nemo obcaecati nulla velit earum molestias.</p>
+                    <a class="btn" href="about.html">About Our Hotel</a>
+                </div>
+            </div>
+        </div>
     </header>
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem facere, ex impedit vitae eos maxime omnis explicabo voluptas laboriosam eveniet non, iusto doloribus? Et ut aperiam quae eligendi rem. Iusto possimus accusantium voluptate praesentium doloremque magnam obcaecati quod, similique molestiae.</p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
 </body>
 
 </html>
