--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Hotel BT | Boston Hotel</title>
 </head>
 
@@ -40,6 +41,30 @@
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
+
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fa fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, fugit.</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fa fa-check-circle fa-3x"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, fugit.</p>
+        </div>
+        <div class="box bg-light">
+            <i class="fa fa-building fa-3x"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, fugit.</p>
+        </div>
+    </section>
+
+    <div class="clr"></div>
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2019 Website Coded by Anthony Smith. All Rights Reserved</p>
+    </footer>
+
 </body>
 
 </html>
