--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <title>Hotel BT | About</title>
 </head>
 
@@ -44,12 +45,12 @@
         <div class="container">
             <h2 class="l-heading">What Our Guests Say</h2>
             <div class="testimonial bg-primary">
-                <img src="./img/person-1.jpg" alt="Samantha">
+                <img src="/img/person-1.jpg" alt="Samantha">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ea eum aliquam voluptatem atque incidunt provident, adipisci quia aliquid iure sint maiores dignissimos, dicta vel. Ad, dolores, ut quia porro cum temporibus odio consequuntur in saepe aliquam rem. Modi, minus?</p>
             </div>
 
             <div class="testimonial bg-primary">
-                <img src="./img/person-2.jpg" alt="Jen">
+                <img src="/img/person-2.jpg" alt="Jen">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ea eum aliquam voluptatem atque incidunt provident, adipisci quia aliquid iure sint maiores dignissimos, dicta vel. Ad, dolores, ut quia porro cum temporibus odio consequuntur in saepe aliquam rem. Modi, minus?</p>
             </div>
         </div>
