--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <title>Hotel BT | Boston Hotel</title>
 </head>
 
@@ -20,14 +22,15 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-            
+
         </nav>
 
         <div id="showcase">
             <div class="container">
                 <div class="showcase-content">
                     <h1><span class="text-primary">Enjoy </span>Your Stay</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, nemo obcaecati nulla velit earum molestias.</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, nemo obcaecati
+                        nulla velit earum molestias.</p>
                     <a class="btn" href="about.html">About Our Hotel</a>
                 </div>
             </div>
@@ -37,7 +40,9 @@
         <div class="info-img"></div>
         <div class="info-content">
             <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem facere, ex impedit vitae eos maxime omnis explicabo voluptas laboriosam eveniet non, iusto doloribus? Et ut aperiam quae eligendi rem. Iusto possimus accusantium voluptate praesentium doloremque magnam obcaecati quod, similique molestiae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem facere, ex impedit vitae eos maxime omnis
+                explicabo voluptas laboriosam eveniet non, iusto doloribus? Et ut aperiam quae eligendi rem. Iusto
+                possimus accusantium voluptate praesentium doloremque magnam obcaecati quod, similique molestiae.</p>
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
