--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex recusandae tempora soluta quis mollitia non necessitatibus modi voluptates inventore dolor!</p>
             </div>
             <div class="info-right">
-                <img src="../img/photo-2.jpg" alt="hotel">
+                <img src="img/photo-2.jpg" alt="hotel">
             </div>
         </div>
     </section>
@@ -46,12 +46,12 @@
         <div class="container">
             <h2 class="l-heading">What Our Guests Say</h2>
             <div class="testimonial bg-primary">
-                <img src="../img/person-1.jpg" alt="Samantha">
+                <img src="img/person-1.jpg" alt="Samantha">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ea eum aliquam voluptatem atque incidunt provident, adipisci quia aliquid iure sint maiores dignissimos, dicta vel. Ad, dolores, ut quia porro cum temporibus odio consequuntur in saepe aliquam rem. Modi, minus?</p>
             </div>
 
             <div class="testimonial bg-primary">
-                <img src="../img/person-2.jpg" alt="Jen">
+                <img src="img/person-2.jpg" alt="Jen">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad ea eum aliquam voluptatem atque incidunt provident, adipisci quia aliquid iure sint maiores dignissimos, dicta vel. Ad, dolores, ut quia porro cum temporibus odio consequuntur in saepe aliquam rem. Modi, minus?</p>
             </div>
         </div>
